k8sprjs/forgejo/resources/forgejo.namespace.yaml
# Namespace for the Forgejo components
apiVersion: v1
kind: Namespace

metadata:
  name: forgejo
